2007-xx-xx - release 0.3
	- disable interrupts during iec_getc
	- add full CRC checking in SD code with retries on errors
	- software fastloader support: Turbodisk protocol
	- card change detection
	- better file name parsing
	- directory loading supports wildcards

2007-11-02 - release 0.2.1
	- bugfix: Don't cause repeated entries at the end of the directory
	- bugfix: Don't repeast the last block of a saved file (1:256 chance)
	- bugfix: Increase all timeouts in the card initialisation
	- Recode 0xff in filenames to ~, both characters map to the pi
	  symbol on the C64

2007-11-01 - release 0.2
	- conditional compilation via make command line for chip type
	  and IO pin assignment (Shadowwolf/LarsP)
	- object files are generated in a subdirectory
	- bug fixes in IEC and buffer handling
	- added project file for AVR Studio (untested)
	- support for subdirectories
	- support for UI+/UI- commands (faster bus for VC20)
	- slightly improved command parser

2007-10-16 - release 0.1
	Initial release